--- a/rick_and_morty_app/pubspec.yaml
+++ b/rick_and_morty_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   go_router: ^8.0.2
   injector: ^2.0.0
+  intl: ^0.18.1
   mocktail: ^0.3.0
 
 dev_dependencies:
