--- a/rick_and_morty_app/pubspec.yaml
+++ b/rick_and_morty_app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   go_router: ^8.0.2
+  http_mock_adapter: ^0.4.4
   injector: ^2.0.0
   intl: ^0.18.1
   mocktail: ^0.3.0
